# ERC-hackathon-2023

./: README.md
robotics_hackathon_automation/: CMakeLists.txt  package.xml
robotics_hackathon_automation/launch/: automation_task.launch
robotics_hackathon_automation/src/: colour_detection.py  controller.py  obstacle_detection.py  path_planner.py
robotics_hackathon_automation/worlds/: maze.world
